# neurovue

./: .gitignore  AGENTS.md  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: provenance.md  roadmap.md
scripts/: ensure-niimath.cjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs  niimath.rs  share.rs  terminal.rs  volumetric_server.rs
src/components/: DatasetDesktop.tsx  NiimathOperationsPanel.tsx  NiivueStage.tsx  StablePreviewImage.tsx  TerminalPanel.tsx  VolumeFilterPanel.tsx
src/domain/: bundle.ts  desktop.ts  niimath.ts  previewLoadQueue.ts  terminal.ts  volumeFacets.ts
src/hooks/: useClipPlanes.ts  useDatasetManifest.ts  useRecentDatasets.ts  useTerminalDock.ts  useVolumeFilters.ts  useVolumeMetadata.ts
