[package]
name = "neurovue"
version = "0.1.0"
description = "NeuroVue desktop viewer"
edition = "2021"

[lib]
name = "neurovue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.7"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", features = ["cors"] }

# The integrated terminal (PTY/shell) is desktop-only: iOS/Android forbid
# spawning subprocesses, so its dependency is excluded from mobile builds.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
portable-pty = "0.8"
